force-app/main/default/objects/Order_Fulfillment__c/fields/Profile_Layout__c.field-meta.xml
<CustomField>
    <fullName>Profile_Layout__c</fullName>
    <description>This field is used to record profile layouts.</description>
    <inlineHelpText>This field is used to record profile layouts.</inlineHelpText>
    <label>Profile Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property Listing(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>