force-app/main/default/objects/Order_Fulfillment__c/fields/Proofed__c.field-meta.xml
<CustomField>
    <fullName>Proofed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proofed</label>
    <type>Checkbox</type>
</CustomField>