force-app/main/default/objects/Order_Fulfillment__c/fields/round_1__c.field-meta.xml
<CustomField>
    <fullName>round_1__c</fullName>
    <formula>Market__r.Auto_Round_One_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round 1</label>
    <type>Date</type>
</CustomField>