force-app/main/default/objects/Order_Fulfillment__c/fields/Save_as_pdf_file_and_Upload_to_JooMag__c.field-meta.xml
<CustomField>
    <fullName>Save_as_pdf_file_and_Upload_to_JooMag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>E reprint checklist field</description>
    <inlineHelpText>Has the reprint been saved as a pdf and uploaded?</inlineHelpText>
    <label>Save as pdf file and Upload to JooMag</label>
    <type>Checkbox</type>
</CustomField>