force-app/main/default/objects/Order_Fulfillment__c/fields/Second_Shipping_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Second_Shipping_Attempt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check along with &quot;shipping info needed&quot;, uncheck shipping info needed after saving.</inlineHelpText>
    <label>Second Shipping Attempt</label>
    <type>Checkbox</type>
</CustomField>