force-app/main/default/objects/Order_Fulfillment__c/fields/Send_to_Production_for_Printing__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Production_for_Printing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Once all files are built for a market, send to production for printing</inlineHelpText>
    <label>Send to Production for Printing</label>
    <type>Checkbox</type>
</CustomField>