force-app/main/default/objects/Order_Fulfillment__c/fields/Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Date__c</fullName>
    <inlineHelpText>Date Order was Shipped</inlineHelpText>
    <label>Shipped Date</label>
    <type>Date</type>
</CustomField>