force-app/main/default/objects/Order_Fulfillment__c/fields/Shipping_Correction_Needed__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Correction_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to email AM and ask Client for new Shipping Address</inlineHelpText>
    <label>Shipping Correction Needed</label>
    <type>Checkbox</type>
</CustomField>