force-app/main/default/objects/Order_Fulfillment__c/fields/Shipping_Goal_Met__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Goal_Met__c</fullName>
    <formula>IF(Shipped_Date__c &lt;= Goal_Shipped_Date__c,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is the Shipped date within 5 days of the ready to ship date?</inlineHelpText>
    <label>Shipping Goal Met</label>
    <type>Checkbox</type>
</CustomField>