force-app/main/default/objects/Order_Fulfillment__c/fields/Shipping_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Type__c</fullName>
    <formula>TEXT(OrderNumber__r.Shipping_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Type</label>
    <type>Text</type>
</CustomField>