force-app/main/default/objects/Order_Fulfillment__c/fields/Shipping_Zip__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip__c</fullName>
    <formula>OrderNumber__r.ShipToZipPostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Zip</label>
    <type>Text</type>
</CustomField>