force-app/main/default/objects/Order_Fulfillment__c/fields/Social_Network__c.field-meta.xml
<CustomField>
    <fullName>Social_Network__c</fullName>
    <inlineHelpText>Digital Announcement Social Network</inlineHelpText>
    <label>Social Network RETIRED</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>