force-app/main/default/objects/Order_Fulfillment__c/fields/Social_Post_10__c.field-meta.xml
<CustomField>
    <fullName>Social_Post_10__c</fullName>
    <label>Social Post 10</label>
    <type>Url</type>
</CustomField>