force-app/main/default/objects/Order_Fulfillment__c/fields/Social_Post_11__c.field-meta.xml
<CustomField>
    <fullName>Social_Post_11__c</fullName>
    <label>Social Post 11</label>
    <type>Url</type>
</CustomField>