force-app/main/default/objects/Order_Fulfillment__c/fields/Social_post_1__c.field-meta.xml
<CustomField>
    <fullName>Social_post_1__c</fullName>
    <label>Social Post 1</label>
    <type>Url</type>
</CustomField>