force-app/main/default/objects/Order_Fulfillment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Content Received</fullName>
            </value>
            <value>
                <fullName>In Revision</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>To Print</fullName>
            </value>
            <value>
                <fullName>Product Created</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Closed No Response</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Ready for FTP</fullName>
            </value>
            <value>
                <fullName>Write copy</fullName>
            </value>
            <value>
                <fullName>In Revision - Urgent</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Scheduled</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Incomplete - 1st Request</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Incomplete - 2nd Request</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Incomplete - 3rd Request</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Incomplete – 4th Request</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Incomplete – Content Needed</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Incomplete – Approval Needed</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Complete - Content Needed</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Complete - Approval Needed</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Complete - Open Fulfillment</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Complete - Urgent Response Needed</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Complete - Follow Up Needed</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Complete – Follow Up Scheduled</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Complete - LONG TERM Follow Up</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Complete</fullName>
            </value>
            <value>
                <fullName>CSR Appointment NOT Complete - Closed</fullName>
            </value>
            <value>
                <fullName>CST Follow Up 1 Complete</fullName>
            </value>
            <value>
                <fullName>CST Follow Up 1 Complete - Open Fulfillment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>