force-app/main/default/objects/Order_Fulfillment__c/fields/Subscription_Status__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Status__c</fullName>
    <label>Subscription Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>