force-app/main/default/objects/Order_Fulfillment__c/fields/Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Survey_Link__c</fullName>
    <formula>&quot;https://fivestarprofessional.tfaforms.net/19?fulfid=&quot; &amp;  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Link</label>
    <type>Text</type>
</CustomField>