force-app/main/default/objects/Order_Fulfillment__c/fields/Testimonial_Display_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Display_Campaign_ID__c</fullName>
    <label>Testimonial Display Campaign ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>