force-app/main/default/objects/Order_Fulfillment__c/fields/Testimonial_Guid__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Guid__c</fullName>
    <label>Testimonial Guid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>