force-app/main/default/objects/Order_Fulfillment__c/fields/Testimonial_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Survey_Link__c</fullName>
    <description>Link to client&apos;s Testimonial Survey</description>
    <inlineHelpText>Link to client&apos;s Testimonial Survey (Filled in when they submit their content/campaign choices)</inlineHelpText>
    <label>Testimonial Survey Link</label>
    <type>Url</type>
</CustomField>