force-app/main/default/objects/Order_Fulfillment__c/fields/Three_Days_Source__c.field-meta.xml
<CustomField>
    <fullName>Three_Days_Source__c</fullName>
    <formula>CASE(
MOD( TODAY()- DATE(1900, 1, 7), 7),
0, Today()+3,
1, Today()+3,
2, Today()+3,
3, Today()+3,
4, Today()+3,
5, Today()+4,
6, Today()+3,
Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Three Days Source</label>
    <type>Date</type>
</CustomField>