force-app/main/default/objects/Order_Fulfillment__c/fields/Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Upload_Date__c</fullName>
    <formula>Market__r.New_Final_Upload__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upload Date</label>
    <type>Date</type>
</CustomField>