force-app/main/default/objects/Order_Fulfillment__c/fields/Web_Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Web_Shipping_State__c</fullName>
    <formula>PrimaryRecipient__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Shipping State</label>
    <type>Text</type>
</CustomField>