force-app/main/default/objects/Order_Fulfillment__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <formula>PrimaryRecipient__r.Website__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Website</label>
    <type>Text</type>
</CustomField>