force-app/main/default/objects/Order_Fulfillment__c/fields/Website_Created__c.field-meta.xml
<CustomField>
    <fullName>Website_Created__c</fullName>
    <label>Website Created</label>
    <type>DateTime</type>
</CustomField>