force-app/main/default/objects/Order_Fulfillment__c/fields/Website_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Website_Last_Updated__c</fullName>
    <label>Website Last Updated</label>
    <type>DateTime</type>
</CustomField>