force-app/main/default/objects/Order_Fulfillment__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <formula>TEXT(OrderNumber__r.Opportunity__r.Winner__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Winner</label>
    <type>Text</type>
</CustomField>