force-app/main/default/objects/Order_Fulfillment__c/fields/WP_Type__c.field-meta.xml
<CustomField>
    <fullName>WP_Type__c</fullName>
    <description>New field to capture wall plaque type from SGIZMO</description>
    <label>WP Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>5 Year</fullName>
            </value>
            <value>
                <fullName>10 Year</fullName>
            </value>
            <value>
                <fullName>15 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>