force-app/main/default/objects/Order_Fulfillment__c/fields/WSJ_Publication_Date__c.field-meta.xml
<CustomField>
    <fullName>WSJ_Publication_Date__c</fullName>
    <formula>Market__r.WSJ_Publication_Date__c</formula>
    <label>WSJ Publication Date</label>
    <type>Text</type>
</CustomField>