force-app/main/default/objects/Order_Fulfillment__c/fields/X5_POINT_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>X5_POINT_Upload_Date__c</fullName>
    <formula>Market__r.X5_POINT_Upload_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>5 POINT Upload Date</label>
    <type>Date</type>
</CustomField>