force-app/main/default/objects/Order_Fulfillment__c/fields/Years_Winner__c.field-meta.xml
<CustomField>
    <fullName>Years_Winner__c</fullName>
    <formula>TEXT(PrimaryRecipient__r.Years_Winner__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Years Winner</label>
    <type>Text</type>
</CustomField>