force-app/main/default/objects/Order_Fulfillment__c/listViews/Subscriptions.listView-meta.xml
<ListView>
    <fullName>Subscriptions</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Next_Action__c</columns>
    <columns>PrimaryRecipient__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Name__c</field>
        <operation>contains</operation>
        <value>subscription</value>
    </filters>
    <label>Subscriptions</label>
</ListView>